syntax = "proto3";
package kratos.api;

option go_package = "pushjob/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Registry registry = 2;
  Kafka kafka = 3;
}

message Server {
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  GRPC grpc = 1;
}

message Registry {
  message ETCD {
    repeated string endpoints = 1;
    string register_server_name = 2;
  }
  ETCD etcd = 3;
}

message Kafka{
  repeated string brokers = 1;
  string ws_push_topic = 2;
}